<resources>
    <string name="app_name">App Binding</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="login" translatable="false">Login</string>
    <string name="password" translatable="false">Password</string>
    <string name="name" translatable="false">Name</string>
    <string name="lastname" translatable="false">Lastname</string>
    <string name="middlename" translatable="false">Midle Name</string>
    <string name="done" translatable="false">Done</string>
    <string name="account_does_not_exists" translatable="false">This account does not exists</string>
</resources>